clusters/memp/ingress/TraefikIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: production

spec:
  rules:
    - host: memp.dev
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: httpbin.default
                port:
                  number: 80
