clusters/memp/ingress/traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-test
  namespace: ingress

spec:
  rules:
    - host: memp.dev
      http:
        paths:
          - path: /test
            pathType: Exact
            backend:
              service:
                name: httpbin
                port:
                  number: 80
